# Argos

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
argos/: __init__.py  audit.py  connectors.py  data.py  graph.py  privacy.py  prompts.py  reasoning.py  schemas.py  synthetic.py
argos/nodes/: __ini__.py  behavioral.py  handoff.py  intake.py  package.py  reason.py  sanctions.py
demo/: app.py
demo/static/: app.js  index.html  style.css
docs/: ARCHITECTURE.md  BUSINESS_OVERVIEW.md  ROADMAP.md  TECHNICAL_DOCUMENTATION.md  THREAT_MODEL.md  WHY_PUBLISHING_THE_PROMPT_IS_SAFE.md
policies/: argos.rego
redteam/: README.md  __init__.py  corpus.yaml  run_hermes_test.py
tests/: test_hermes.py  test_privacy.py  test_schemas.py
