[project]
name = "argos"
version = "0.1.0"
description = "Open-source Alert Investigation Copilot for financial crime teams"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "The Argos Contributors" }]
keywords = ["fraud", "aml", "fincen", "agentic-ai", "investigation", "sar"]

# Dependencies are pinned to minor versions for reproducibility.
# The security posture of this project depends on supply-chain discipline —
# see docs/THREAT_MODEL.md#asi06-supply-chain for the rationale.
dependencies = [
    # Orchestration
    "langgraph>=0.2.50,<0.3",
    "pydantic>=2.9,<3",
    # Structured LLM output
    "instructor>=1.6,<2",
    "ollama>=0.4,<0.5",
    # PII pseudonymization
    "presidio-analyzer>=2.2,<3",
    "presidio-anonymizer>=2.2,<3",
    # Demo API and UI serving
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "httpx>=0.27,<0.28",
    # Data handling
    "pyyaml>=6.0,<7",
    "python-dateutil>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "ruff>=0.7,<0.8",
]
# The vLLM backend is optional because it requires CUDA and a real GPU.
# Local demo uses Ollama. Production deployments use vLLM.
production = [
    "vllm>=0.6,<0.7",
]

[project.urls]
Repository = "https://github.com/pho5nix/argos"
Documentation = "https://github.com/pho5nix/argos/tree/main/docs"
ThreatModel = "https://github.com/pho5nix/argos/blob/main/docs/THREAT_MODEL.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["argos"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "A"]
ignore = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
